tests/NormalTests/paczka1/small_fuzzy/71823686.err
Error in line 2: WTGij8mf A872 51,4
Error in line 3: 7K7P65q A872 737,8
Error in line 5: lEHP1U A872 16,5
Error in line 13: DT5 A96$ 11,9
